# synthetic-data-generator-energy-market

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  TEST_IMPROVEMENT_PLAN.md  pyproject.toml  pytest.ini  run_all_scenarios.py  run_scenario1_gas_crisis.py  run_scenario2_coal_phaseout.py  todo.txt
.github/: copilot-instructions.md
configs/: 1_gas_crisis.yaml  2_coal_phaseout.yaml  3_empirical_data_example.yaml  _base_template.yaml  example_direct_renewable_avail_mode.yaml  example_global_mode.yaml  example_hybrid_mode.yaml  example_local_only_mode.yaml  example_weather_simulation_mode.yaml
documentation/: CSV_LOADERS_GUIDE.md  QUICKSTART.md  TESTING.md
empirical_data/: empirical_solar_generation.csv
runners/: README.md  run_all_scenarios.py  run_scenario1_gas_crisis.py  run_scenario2_coal_phaseout.py
synthetic_data_pkg/: __init__.py  cli.py  config.py  demand.py  dists.py  io.py  regimes.py  runner.py  scenario.py  simulate.py  supply.py  utils.py
tests/: conftest.py
tests/functional/: test_workflows.py
tests/integration/: test_linear_capacity_integration.py  test_price_responsiveness.py  test_scenarios.py  test_time_scale_robustness.py
tests/unit/: test_availability_edge_cases.py  test_capacity_scale_robustness.py  test_demand.py  test_demand_robustness.py  test_dists.py  test_equilibrium_diagnostics.py  test_fuel_price_robustness.py  test_io.py  test_linear_distribution.py  test_numerical_robustness.py  test_price_grid_robustness.py  test_scenario.py  test_simulate.py  test_supply.py  test_utils.py  test_weather_robustness.py
validation_notebooks/: validate_scenario.ipynb  validation_1_gas_crisis.ipynb  validation_2_coal_phaseout.ipynb
