[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data"
version = "0.1.0"
description = "Synthetic power-market curves with regime shifts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy==2.3.4",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "pydantic>=1.10",
  "typer>=0.12",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm ~= 4.60",
  "ipykernel>=6.25", 
  "jupyter-client>=8.4", 
  "jupyterlab>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-xdist>=3.3",
  "pytest-timeout>=2.1",
  "pre-commit>=3.5",
  "black>=24.1",
  "isort>=5.13",
  "ruff>=0.2",
  "mypy>=1.8",
  "types-PyYAML",
  "pandas-stubs"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synthetic_data_pkg*"]

[project.scripts]
synth-data = "synthetic_data_pkg.cli:entrypoint"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
