[tool.poetry]
name = "synthetic-electricity-market-data-generator"
version = "0.1.0"
description = "Synthetic power-market curves with regime shifts"
authors = ["Henry Baker <henry.c.g.baker@gmail.com>"]
readme = "README.md"
packages = [{include = "synthetic_data_pkg"}]

[tool.poetry.scripts]
synth-data = "synthetic_data_pkg.cli:entrypoint"

[tool.poetry.dependencies]
python = "^3.11"  # CHANGED from ^3.9
numpy = "2.3.4"
pandas = "^2.1"
pyyaml = "^6.0"
pydantic = "^2.0"
typer = "^0.13"
click = "^8.1,<9.0"
scipy = "^1.11"
matplotlib = "^3.7"
seaborn = "^0.12"
tqdm = "^4.60"
ipykernel = "^6.25"
jupyter-client = "^8.4"
jupyterlab = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.3"
pytest-timeout = "^2.1"
pre-commit = "^3.5"
black = "^24.1"
isort = "^5.13"
ruff = "^0.2"
mypy = "^1.8"
types-PyYAML = "*"
pandas-stubs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']  # UPDATED

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"  # UPDATED

[tool.mypy]
python_version = "3.11"  # FIXED typo (was python = "^3.11")
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true